feat: Setting up basic movie package

--- a/_packages/katzsimon/base/resources/css/admin.scss
+++ b/_packages/katzsimon/base/resources/css/admin.scss
@@ -9,6 +9,9 @@
 
     @import '_buttons';
     @import '_forms';
+    @import '_cards';
+    @import '_tables';
+    @import '_toast';
 
     @import '_general';
 
