feat: Added app views: Cinemas, Movies, Booking, Screenings, Account, Home pages

--- a/_packages/katzsimon/base/resources/css/_general.scss
+++ b/_packages/katzsimon/base/resources/css/_general.scss
@@ -17,3 +17,7 @@ a:hover {
 .link {
     @apply hover:text-blue-500 underline hover:underline;
 }
+
+.nav-active {
+    @apply bg-gray-900 text-white;
+}
