--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -746,6 +746,106 @@ input[readonly] {
   background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
+.card {
+  --tw-border-opacity: 1;
+  border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+  border-radius: 0.25rem;
+  border-width: 1px;
+}
+
+.card .card-header {
+  --tw-bg-opacity: 1;
+  background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+  --tw-border-opacity: 1;
+  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+  border-bottom-width: 1px;
+  padding: 1rem;
+}
+
+.card .card-header .card-title {
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  margin-bottom: 0px;
+}
+
+.card .card-footer {
+  --tw-border-opacity: 1;
+  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+  border-top-width: 1px;
+  padding: 1rem;
+}
+
+.card .card-body {
+  padding: 1rem;
+}
+
+.table-items thead {
+  background-color: #eee !important;
+}
+
+.table-items thead th {
+  text-transform: uppercase;
+}
+
+.table-items thead tr th:last-child {
+  width: 200px;
+  text-align: right;
+}
+
+.table-items tbody tr td:last-child {
+  text-align: right;
+}
+
+.table {
+  margin-bottom: 0;
+}
+
+.table.table-middle td, .table.table-middle th {
+  vertical-align: middle;
+}
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  --tw-bg-opacity: 1;
+  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+
+.table {
+  --tw-text-opacity: 1;
+  color: rgba(17, 24, 39, var(--tw-text-opacity));
+  width: 100%;
+}
+
+.table thead th {
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+  border-bottom-width: 2px;
+  vertical-align: bottom;
+}
+
+.table td, .table th {
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+  border-top-width: 1px;
+  padding: 0.75rem;
+}
+
+.table.table-bordered {
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+  border-width: 1px;
+}
+
+.table-bordered td, .table-bordered th {
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+  border-width: 1px;
+}
+
+th {
+  text-align: inherit;
+}
+
 svg {
   width: 1rem;
   height: 1rem;
@@ -793,6 +893,32 @@ a:hover {
   background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.booking {
+  border: 1px solid #ccc;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  position: relative;
+}
+
+.booking:last-child {
+  margin-bottom: 0;
+}
+
+.btn-cancel-booking {
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
+}
+
+@media (max-width: 960px) {
+  .btn-cancel-booking {
+    position: relative;
+    right: auto;
+    bottom: auto;
+    margin-top: 0.5rem;
+  }
 }
 
 .container {
