--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -700,6 +700,7 @@ article .table {
   cursor: pointer;
   display: inline-block;
   font-weight: 400;
+  font-weight: 700;
   font-size: 1rem;
   line-height: 1.5rem;
   line-height: 1.5;
@@ -722,6 +723,20 @@ article .table {
   background-color: rgba(29, 78, 216, var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.btn-light {
+  --tw-bg-opacity: 1;
+  background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+
+.btn-light:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 
 .form-control {
@@ -789,7 +804,7 @@ input[readonly] {
 }
 
 .table-items thead tr th:last-child {
-  width: 200px;
+  width: 220px;
   text-align: right;
 }
 
@@ -859,6 +874,7 @@ a:hover {
   background-color: transparent;
   --tw-border-opacity: 1;
   border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+  border-radius: 0px;
   border-top-width: 1px;
   margin: 0px;
   margin-top: 0.5rem;
